# conda-self

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: build.yml  docs.yml  tests.yml
conda_self/: exceptions.py
conda_self/cli/: main_reset.py
conda_self/health_checks/: base_protection.py
demos/: _settings.tape  _setup.sh  base-protection.tape  install-plugin.tape  quickstart.tape  remove.tape  reset.tape  update.tape
docs/: changelog.md  conf.py  configuration.md  features.md  index.md  motivation.md  quickstart.md
docs/_static/css/: custom.css
docs/guides/: custom-channels.md  resetting-base.md
docs/reference/: cli.md
docs/tutorials/: index.md  managing-plugins.md  protecting-base.md
tests/: conftest.py  test_cli_reset.py
