[build-system]
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "conda-self"
description = "A self command for conda"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  # "conda >=26.1.1",  # not on PyPI, installed via conda
]
dynamic = ["version"]

[project.urls]
documentation = "https://conda-incubator.github.io/conda-self"
repository = "https://github.com/conda-incubator/conda-self"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_self/_version.py"

[project.entry-points.conda]
"conda-self" = "conda_self.plugin"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = ["conda_self/_version.py"]
show_missing = true
skip_covered = true
sort = "Miss"

[tool.mypy]
warn_no_return = false
exclude = "docs/.*"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
# see https://docs.astral.sh/ruff/rules/
select = [
  # "D1",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "FA",  # flake8-future-annotations
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "RUF100",  # Unused noqa directive
  "T10",  # flake8-debugger
  "TCH",  # flake8-type-checking
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=26.1.1"

[tool.pixi.tasks]
conda = { cmd = "python -m conda", env = { CONDA_CHANNELS = "conda-forge" } }

[tool.pixi.tasks.demos]
cmd = """bash -c 'if [ -n "$1" ]; then vhs "demos/$1.tape"; else for tape in demos/*.tape; do [[ "$(basename "$tape")" == _* ]] && continue; vhs "$tape"; done; fi' -- {{ name }}"""
args = [{ arg = "name", default = "" }]
description = "Record demo GIFs"

[tool.pixi.pypi-dependencies]
"conda-self" = { path  = ".", editable = true }

[tool.pixi.feature.build]
dependencies = { conda-build = "*", anaconda-client = "*" }
tasks = { build = "conda build recipe" }

[tool.pixi.feature.docs]
channels = [
  "conda-forge",  # Force it for docs, not available in defaults
]
[tool.pixi.feature.docs.tasks]
docs = { cmd = "python -m sphinx.cmd.build -M dirhtml . _build", cwd = "docs" }
serve = { cmd = "python -m http.server", cwd = "docs/_build/dirhtml" }
clean = { cmd = "rm -rf _build", cwd = "docs" }

[tool.pixi.feature.docs.dependencies]
python = "3.10.*"
conda-sphinx-theme = { version = "*", channel = "conda-forge" }
myst-parser = "*"
sphinx = "*"
sphinx-copybutton = "*"
sphinx-design = "*"

[tool.pixi.feature.test.tasks]
test = 'python -m pytest'
pre-commit = 'pre-commit'
lint = 'pre-commit'

[tool.pixi.feature.test]
[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-mock = "*"
pre-commit = "*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314]
platforms = ["linux-64", "osx-arm64", "win-64"]
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
dev = ["py310"]
build = ["build"]
docs = ["docs"]
test-py310 = ["test", "py310"]
test-py311 = ["test", "py311"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]
test-py314 = ["test", "py314"]
